# kokoclone-fastapi

./: .dockerignore  .gitignore  README.md  app.py  publish-gpu.ps1  publish-gpu.sh  pyproject.toml  requirements.txt  start-cpu.ps1  start-cpu.sh  start-gpu.ps1  start-gpu.sh
docker/: compose.cpu.yml  compose.gpu.image.yml  compose.gpu.yml
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
kokoclone_api/: __init__.py  config.py  main.py  routes.py  service.py  webui.py
tests/: test_api_contract.py  test_container_publish_assets.py  test_packaging.py  test_start_scripts.py
