[project]
name = "kokoclone"
version = "0.1.0"
description = "KokoClone is a fast, real-time compatible multilingual voice cloning system built on top of Kokoro-ONNX, one of the fastest open-source neural TTS engines available today."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=6.8.0",
    "huggingface-hub>=1.5.0",
    "kanade-tokenizer @ git+https://github.com/frothywater/kanade-tokenizer",
    "kokoro-onnx>=0.5.0",
    "misaki[en,ja,zh]>=0.9.4",
    "ninja>=1.13.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
gpu = [
    "kokoro-onnx[gpu]>=0.5.0",
]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "cli", "inference"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "kokoclone_api*"]
